# research-copilot

./: .env.example  .gitignore  Dockerfile  HOW_TO_FIX.md  LICENSE  PLAN_RELATED_WORK.md  QUICKSTART.md  README.md  gradio_app.py  pyproject.toml  requirements.txt  space_main.py
.github/workflows/: sync-to-hf.yml
app/: config.py  main.py
app/api/routes/: agent.py  chat.py  document.py  health.py  rag.py  web.py
app/core/agent/: __init__.py  function_calling_agent.py  orchestrator.py  planner.py  react_agent.py  reflection.py
app/core/intent/: __init__.py  recognizer.py
app/core/memory/: __init__.py  long_term.py  manager.py  short_term.py
app/core/rag/: __init__.py  generator.py  llm_judge.py  reranker.py  retriever.py  service.py
app/core/tools/: __init__.py  base.py  registry.py  router.py
app/core/tools/builtin/: __init__.py  arxiv_search.py  calculator.py  database.py  (+3 more)
app/etl/: __init__.py  chunker.py  parser.py  pipeline.py
app/infrastructure/cache/: __init__.py  redis_cache.py
app/infrastructure/database/: __init__.py  models.py  session.py
app/infrastructure/llm/: __init__.py  circuit_breaker.py  embedding.py  model_router.py  types.py
app/infrastructure/trace/: __init__.py  tracer.py
app/infrastructure/vectordb/: __init__.py  chroma_adapter.py  milvus_client.py
app/models/: __init__.py  enums.py  schemas.py
eval/: evaluate.py  qa_set.json  qa_set_30.json
seed_docs/: 01-about-this-project.md  02-hybrid-retrieval.md  03-function-calling-agent.md  04-cross-encoder-rerank.md  05-production-engineering.md  06-evaluation-methodology.md
