[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-copilot"
version = "0.1.0"
description = "Multi-tool research assistant Agent: hybrid retrieval + Cross-Encoder rerank + Function Calling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agent", "rag", "fastapi", "function-calling", "rerank", "llm"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "openai>=1.60.0",
    "tiktoken>=0.8.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "chromadb>=1.5.0",
    "pypdf>=5.0.0",
    "sentence-transformers>=3.3.0",
    "ddgs>=9.14.0",
    "tavily-python>=0.7.0",
    "gradio>=6.0.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
